<resources>
    <string name="app_name">WhatDoILearn</string>
    <string name="texto">O jogo é baseado em partidas norsária e, para isso, , que levam à suas bases. Existem 3 trilhas no mapa do jogo, que por convenção são chamadas de trilha de cima (Top, atravessa a parte de cima do mapa), trilha do meio (Mid ou Middle, caminho que atravessa o centro do mapa) e trilha de baixo (Bot ou Bottom, caminho que atravessa a parte de baixo do mapa).</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="priority">Priority</string>
    <string name="add">Save</string>
    <string name="cancel">Cancel</string>
    <string name="high">HIGH</string>
    <string name="low">LOW</string>
    <string name="medium">MEDIUM</string>
    <string name="write_what_do_you_want">Write what do you want!</string>
    <string name="write_title_for_learned_item">Write title for Learned Item</string>
    <string name="simple_title">Simple title</string>
    <string name="textview">TextView</string>
</resources>